reverted some styles on mobile due to the new metafield for device size. Those changes are no longer necessary.

--- a/styles.css
+++ b/styles.css
@@ -610,6 +610,7 @@ footer{
   display: none;
 }
 .featured-collection-section{
+  height: 300px;
   margin-top: 140px;
   margin-bottom: 140px;
 }
@@ -638,9 +639,6 @@ footer{
 }
 .copy-block-container .copy-header{
   text-align: center;
-}
-.bookend-l, .bookend-r{
-  width: 80px;
 }
 footer{
   margin-top: 80px;
